# nonlinear-deformation-design

./: .gitignore  CITATION.bib  LICENSE  README.md  environment.yml  pyproject.toml
data/: README.md  displacements.csv  parameters.csv
examples/: forward_inputs.csv  inverse_inputs.csv
models/: README.md  forward-model.pt  seeds.txt  tandem-model.pt
models/forward/: 3577.pt  4910.pt  5924.pt  6224.pt  6485.pt  6587.pt  7773.pt  7789.pt  9974.pt
models/tandem/: 100-0.01.pt  100-0.1.pt  100-0.pt  100-1.pt  3577-0.01.pt  3577-0.1.pt  3577-0.pt  3577-1.pt  4910-0.01.pt  4910-0.1.pt  4910-0.pt  4910-1.pt  5924-0.01.pt  5924-0.1.pt  5924-0.pt  5924-1.pt  6224-0.01.pt  6224-0.1.pt  6224-0.pt  6224-1.pt  6485-0.01.pt  6485-0.1.pt  6485-0.pt  6485-1.pt  6587-0.01.pt  6587-0.1.pt  6587-0.pt  6587-1.pt  7773-0.01.pt  7773-0.1.pt  7773-0.pt  7773-1.pt  7789-0.01.pt  7789-0.1.pt  7789-0.pt  7789-1.pt  9974-0.01.pt  9974-0.1.pt  9974-0.pt  9974-1.pt
python/: dataset_statistics.py  load_seeds.py  test_forward.py  train_forward.py  train_inverse.py
python/ml/: __init__.py  calculate_stiffness.py  calculate_work.py  confidence_interval.py  data_processor.py  dataset.py  load_data.py  load_seeds.py  loss.py  model.py  tnn_dataset.py
python/utils/: __init__.py  calculate_stiffness.py  calculate_work.py  get_device.py  invertible_column_transformer.py  load.py  print_model.py  save.py  set_seed.py  split_indices.py  tester.py  trainer.py
src/tnn/: __init__.py  data_processor.py  (+5 more)
tools/: forward_design.py  inverse_design.py  test_forward.py  train_forward.py  train_tandem.py
(+27 files in other folders)
